# avature_scraper

./: .gitignore  pyproject.toml
avature_scraper/: __init__.py
avature_scraper/extract/: cli.py  scraper.py
talent_data_pipeline/: __init__.py  utils.py
talent_data_pipeline/config/: consts.py  transformer.py
talent_data_pipeline/extract/: avature_caller.py  cli.py  scraper.py
talent_data_pipeline/load/: sqlite_loader.py
talent_data_pipeline/transform/: applicants.py  jobs.py  offers.py
