[project]
name = "avature-scraper"
version = "0.4.0"
description = "Scrape Avature links and save as csv files."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.13.3",
    "black[jupyter]>=25.1.0",
    "lxml>=5.3.1",
    "numpy>=2.2.3",
    "pandas>=2.2.3",
    "python-dotenv>=1.0.1",
    "requests>=2.32.3",
]

[tool.uv]
package = true

[project.scripts]
avature-scrape = "avature_scraper.extract.cli:main"
